[package]
name = "presentrs"
version = "0.2.0"
authors = ["Janito Vaqueiro Ferreira Filho <janito.vff@gmail.com>"]
edition = "2018"

[target.'cfg(target_family = "wasm")'.dependencies]
once_cell = "1.8"
yew = "0.18"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["NodeList"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
axum = "0.2"
comrak = "0.11"
derive_more = "0.99"
html5ever = "0.25"
markup5ever_arcdom = "0.1"
tower-http = { version = "0.1", features = ["fs"] }
