[package]
name = "presentrs"
version = "0.2.0"
authors = ["Janito Vaqueiro Ferreira Filho <janito.vff@gmail.com>"]
edition = "2018"

[target.'cfg(target_family = "wasm")'.dependencies]
once_cell = "1.8"
lru = "0.6"
yew = "0.18"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["NodeList"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
axum = { version = "0.2", features = ["ws"] }
comrak = "0.11"
derive_more = "0.99"
futures-util = "0.3"
html5ever = "0.25"
markup5ever_arcdom = "0.1"
tower-http = { version = "0.1", features = ["fs"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
